--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,22 +1,14 @@
-@import './base.css';
+@import './theme.css';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.scrolling-container {
-  width: 100%;
-  white-space: nowrap;
-  mask-image: linear-gradient(
-    to left,
-    transparent,
-    black calc(0% + 8px),
-    black calc(100% - 8px),
-    transparent
-  );
-}
-
-#app {
-  max-width: 1280px;
+html {
   height: 100vh;
+  width: 100vw;
+  background-color: var(--color-background);
+}
+#app {
+  width: 100%;
 }
